remove `ListenableFuture` as it is deprecated